--- a/compost.html
+++ b/compost.html
@@ -10,6 +10,8 @@ layout: default
     <h3>New municipal code in Chicago</h3>
     <p><a href="http://library.amlegal.com/nxt/gateway.dll/Illinois/chicago_il/title7healthandsafety/chapter7-28healthnuisances?f=templates$fn=default.htm$3.0$vid=amlegal:chicago_il$anc=JD_7-28-715" target="_blank">Section 7-28-715(3)(iii)</a> of the Municipal Code of Chicago, and <a href="https://www.cityofchicago.org/city/en/depts/dol/rules-and-regulations-portal.html">the Rules for Garden Composting Operations</a>, require garden composting operators to register on-line by April 1st of every year. In addition, the operator must keep the information current by updating the registration within 14 days of any change.</p>
     <p>Answering the questions on the compost form will fulfill your registration obligation. If you have any questions regarding your registration, please send an email to <a href="mailto:gardencomposting@cityofchicago.org">gardencomposting@cityofchicago.org</a>.</p>
+    <hr>
+    <p><em>The City makes the content of this form available in response to Freedom of Information Act requests. By completing it, you waive any rights or claims related to the public release of this disclosure and authorize the City to verify its contents.</em></p>
   </div>
   <div class='col-md-12 text-center'>
   <br>
