Add partners to about page

--- a/about.html
+++ b/about.html
@@ -3,32 +3,56 @@ layout: default
 ---
 
 <div class='row'>
-  <div class='col-md-12'>
-    <h2 style="text-align: center"><strong><u>What We Are</u></strong></h2>
+  <div class='col-md-9'>
+    <h2 id="what-we-are"><strong>What We Are</strong></h2>
+    <p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a>, <a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a>, and <a href="http://steans.depaul.edu/" target="_blank">DePaul University's Irwin W. Steans Center</a>.</p>
+  
+    <h2 id='how-we-help'><br><strong>How We Help</strong></h2>
+      <p>CUAMP is not a research project, but rather a collection of information on urban agriculture for the sole purpose of immediately making it available to the public as a resource. The design of CUAMP takes into consideration that different individuals, organizations and institutions have different goals in conducting the inventory/map and will use the information for different purposes. Practitioners, researchers, non-profits, individuals and government agencies will each use sections of the inventory that are most relevant to their educational, research, policy, and informational purposes.</p>
+  
+    <h2 id='how-you-help'><br><strong>How You Help</strong></h2>
+    <p>Efforts to conduct the inventory are being led by supporters of urban agriculture throughout Chicago. No single individual or organization has ownership of the information and participation is voluntary. CUAMP is a collaborative endeavor that welcomes participation by anyone with an interest in promoting urban agriculture in Chicago. Essentially, CUAMP consists of the submissions made by contributors to the urban agriculture inventory. Contributors are therefore defined as individuals or organizations that submit information into the inventory.</p>
+
+    <h2 id='partners'><br><strong>Partners</strong></h2>
+    <div class="row">
+      <div class='col-md-6'>
+        <h4><strong><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></strong></h4>
+        <p>445 N Sacramento Blvd, Suite 204<br>Chicago, IL 60612<br>Phone: (773) 826-3240<br>Fax: (773) 442-0299<br><a href="mailto:info@neighbor-space.org">info@neighbor-space.org</a></p>
+      </div>
+      <div class='col-md-6'>
+        <h4><strong><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></strong></h4>
+        <p><a href="https://www.facebook.com/AUAChicago"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a><br><a href="https://twitter.com/AUAChicago"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a><br><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class='col-md-6'>
+        <h4><strong><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></strong></h4>
+          <p>2233 N. Kenmore Ave.<br>Chicago, IL 60614<br>Phone: (773) 325-7457<br>Fax: (773) 325-7459</p>
+      </div>
+      <div class='col-md-6'>
+        <h4><strong><a href="https://www.csu.edu/nac/" target="_blank">Chicago State University - Neighborhood Assistance Center</a></strong></h4>
+        <p>
+          Daniel Block, Director<br>
+          Phone: (773) 995-2310<br>
+          <a href="mailto:dblock@csu.edu">dblock@csu.edu</a>
+        </p>
+      </div>
+    </div>
+
+    <h2 id='handling-privacy'><br><strong>Handling Privacy</strong></h2>
+    <p>It is CUAMP’s goal that as much of the urban agriculture inventory as possible will be publicly accessible. However, CUAMP recognizes that some of the data collected could need to remain anonymous. Therefore growing sites have the option to specify that certain fields, such as location and contact information, not be made publicly accessible. Administrators will not take any actions that could lead to this information being made public in any venue.</p>
+    <br><br>
   </div>
-  <div class='col-md-1'></div>
-  <div class='col-md-10'>
-      <br><p style="text-align: center">The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank"><u>NeighborSpace</u></a>, <a href="https://auachicago.org/" target="_blank"><u>Advocates for Urban Agriculture</u></a>, and <a href="http://steans.depaul.edu/" target="_blank"><u>DePaul University's Irwin W. Steans Center</u></a>.</p>
-  </div>
-  <div class='col-md-12'>
-    <h2 style="text-align: center"><br><strong><u>How We Help</u></strong></h2>
-  </div>
-  <div class='col-md-1'></div>
-  <div class='col-md-10'>
-      <br><p style="text-align: center">CUAMP is not a research project, but rather a collection of information on urban agriculture for the sole purpose of immediately making it available to the public as a resource. The design of CUAMP takes into consideration that different individuals, organizations and institutions have different goals in conducting the inventory/map and will use the information for different purposes. Practitioners, researchers, non-profits, individuals and government agencies will each use sections of the inventory that are most relevant to their educational, research, policy, and informational purposes.</p>
-  </div>
-  <div class='col-md-12'>
-    <h2 style="text-align: center"><br><strong><u>How You Help</u></strong></h2>
-  </div>
-  <div class='col-md-1'></div>
-  <div class='col-md-10'>
-      <br><p style="text-align: center">Efforts to conduct the inventory are being led by supporters of urban agriculture throughout Chicago. No single individual or organization has ownership of the information and participation is voluntary. CUAMP is a collaborative endeavor that welcomes participation by anyone with an interest in promoting urban agriculture in Chicago. Essentially, CUAMP consists of the submissions made by contributors to the urban agriculture inventory. Contributors are therefore defined as individuals or organizations that submit information into the inventory.</p>
-  </div>
-  <div class='col-md-12'>
-    <h2 style="text-align: center"><br><strong><u>Handling Privacy</u></strong></h2>
-  </div>
-  <div class='col-md-1'></div>
-  <div class='col-md-10'>
-      <br><p style="text-align: center">It is CUAMP’s goal that as much of the urban agriculture inventory as possible will be publicly accessible. However, CUAMP recognizes that some of the data collected could need to remain anonymous. Therefore growing sites have the option to specify that certain fields, such as location and contact information, not be made publicly accessible. Administrators will not take any actions that could lead to this information being made public in any venue.<br></p>
+  <div class='col-md-3 hidden-xs hidden-sm'>
+    <div class='well'>
+      <h4><i class="fa fa-info-circle" aria-hidden="true"></i> About CUAMP</h4>
+      <ul class='about'>
+        <li><a href="#what-we-are">What We Are</a></li>
+        <li><a href="#how-we-help">How We Help</a></li>
+        <li><a href="#how-you-help">How You Help</a></li>
+        <li><a href="#partners">Partners</a></li>
+        <li><a href="#handling-privacy">Handling Privacy</a></li>
+      </ul>
+    </div>
   </div>
 </div>
